// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio - Snapshot Tests > matches snapshot for radio with JSX children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="[object Object]"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with all props combined 1`] = `
<input
  checked=""
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600 complete-radio-class"
  id="complete-radio-id"
  label="Complete Radio"
  name="complete-radio-group"
  required=""
  type="radio"
  value="complete-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with array children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Array,Children"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with boolean children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with checked prop 1`] = `
<input
  checked=""
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with children content 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with custom className 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600 custom-radio-class"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with custom id 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  id="custom-radio-id"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with custom props 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  data-custom="test-value"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with defaultChecked prop 1`] = `
<input
  checked=""
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with disabled prop 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  disabled=""
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with empty className 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with empty id 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  id=""
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with empty label 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label=""
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with empty name 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  name=""
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with empty string children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label=""
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with empty value 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value=""
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with fragment children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="[object Object]"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with long id 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  id="radio-with-very-long-id-that-contains-multiple-words-and-should-be-handled-properly-by-the-component"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with long text label 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="This is a very long radio label that should be handled properly by the component and should not break the layout or functionality"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with long value 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value-with-very-long-string-that-contains-multiple-words-and-should-be-handled-properly-by-the-component"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with multiple classes 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600 class1 class2 class3"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with multiple custom props 1`] = `
<input
  aria-label="Custom radio"
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  data-another="another-value"
  data-custom="test-value"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with name prop 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  name="radio-group"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with null children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with null className 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with null id 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with null label 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with null name 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with null value 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with number children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="42"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with onChange handler 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with required prop 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  required=""
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with required props 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with special characters in id 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  id="radio-with-special-chars-!@#$%^&*()"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with special characters in label 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio with special chars: !@#$%^&*()"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with special characters in name 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  name="radio-group-with-special-chars-!@#$%^&*()"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with special characters in value 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value-with-special-chars-!@#$%^&*()"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with string children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="String Children"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with unchecked prop 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with undefined children 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with undefined className 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with undefined id 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with undefined label 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with undefined name 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with undefined value 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with unicode characters in id 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  id="radio-with-unicode-📻🎵"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with unicode characters in label 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio with unicode: 📻 🎵"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with unicode characters in value 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="Radio Label"
  type="radio"
  value="radio-value-with-unicode-📻🎵"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with whitespace in className 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600 spaced-class"
  label="Radio Label"
  type="radio"
  value="radio-value"
/>
`;

exports[`Radio - Snapshot Tests > matches snapshot for radio with whitespace label 1`] = `
<input
  class="h-4 w-4 border border-gray-300 text-cyan-600 focus:ring-2 focus:ring-cyan-500 dark:border-gray-600 dark:bg-gray-700 dark:focus:bg-cyan-600 dark:focus:ring-cyan-600"
  label="   "
  type="radio"
  value="radio-value"
/>
`;
